[gd_scene format=4 uid="uid://fbkypssd6kr3"]

[ext_resource type="Texture2D" uid="uid://7f8a4sbmukyj" path="res://assets/TEMP/brackeys_platformer_assets/brackeys_platformer_assets/sprites/world_tileset.png" id="1_uff1w"]
[ext_resource type="Script" uid="uid://b1iy3au1hit4f" path="res://scripts/world/testchunk.gd" id="2_u7sce"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uff1w"]
texture = ExtResource("1_uff1w")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_u7sce"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_uff1w")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7sce"]
size = Vector2(2, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdvp6"]
size = Vector2(2.5, 61)

[node name="Room 1 temp" type="Node2D" unique_id=164205513]
script = ExtResource("2_u7sce")

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1787077792]
tile_map_data = PackedByteArray("AAD//wAAAAACAAAAAAAAAAAAAAACAAAAAAABAAAAAAACAAAAAAACAAAAAAACAAAAAAADAAAAAAACAAAAAAAEAAAAAAACAAAAAAAFAAAAAAACAAAAAAAGAAAAAAACAAAAAAD+/wAAAAACAAAAAAD9/wAAAAACAAAAAAD8/wAAAAACAAAAAAD7/wAAAAACAAAAAAD6/wAAAAACAAAAAAD5/wAAAAACAAAAAAD4/wAAAAACAAAAAAD4////AAACAAAAAAD4//7/AAACAAAAAAD4//3/AAACAAAAAAD4//z/AAACAAAAAAD4//v/AAACAAAAAAD5//v/AAACAAAAAAD6//v/AAACAAAAAAD7//v/AAACAAAAAAD8//v/AAACAAAAAAD9//v/AAACAAAAAAD+//v/AAACAAAAAAD///v/AAACAAAAAAAHAAAAAAACAAAAAAAIAAAAAAACAAAAAAAJAAAAAAACAAAAAAAKAAAAAAACAAAAAAALAAAAAAACAAAAAAAMAAAAAAACAAAAAAANAAAAAAACAAAAAAAOAAAAAAACAAAAAAAPAAAAAAACAAAAAAAQAAAAAAACAAAAAAARAAAAAAACAAAAAAASAAAAAAACAAAAAAATAAAAAAACAAAAAAAUAAAAAAACAAAAAAAUAPD/AAACAAAAAAATAPD/AAACAAAAAAASAPD/AAACAAAAAAARAPD/AAACAAAAAAAQAPD/AAACAAAAAAAPAPD/AAACAAAAAAAOAPD/AAACAAAAAAANAPD/AAACAAAAAAAMAPD/AAACAAAAAAALAPD/AAACAAAAAAAKAPD/AAACAAAAAAAJAPD/AAACAAAAAAAIAPD/AAACAAAAAAAHAPD/AAACAAAAAAAGAPD/AAACAAAAAAAFAPD/AAACAAAAAAAEAPD/AAACAAAAAAADAPD/AAACAAAAAAACAPD/AAACAAAAAAABAPD/AAACAAAAAAAAAPD/AAACAAAAAAAAAPH/AAACAAAAAAAAAPL/AAACAAAAAAAAAPP/AAACAAAAAAAAAPT/AAACAAAAAAAAAPX/AAACAAAAAAAAAPb/AAACAAAAAAAAAPf/AAACAAAAAAAAAPj/AAACAAAAAAAAAPn/AAACAAAAAAAAAPr/AAACAAAAAAAAAPv/AAACAAAAAAANAPz/AAACAAAAAAAOAPz/AAACAAAAAAAPAPz/AAACAAAAAAAQAPz/AAACAAAAAAAHAPr/AAACAAAAAAAGAPr/AAACAAAAAAAFAPr/AAACAAAAAAAEAPr/AAACAAAAAAAKAPb/AAACAAAAAAALAPb/AAACAAAAAAAMAPb/AAACAAAAAAANAPb/AAACAAAAAAARAPP/AAACAAAAAAATAPP/AAACAAAAAAAVAAAAAAACAAAAAAAWAAAAAAACAAAAAAAXAAAAAAACAAAAAAAYAAAAAAACAAAAAAAZAAAAAAACAAAAAAAaAAAAAAACAAAAAAAbAAAAAAACAAAAAAAcAAAAAAACAAAAAAAdAAAAAAACAAAAAAAeAAAAAAACAAAAAAAfAAAAAAACAAAAAAAgAAAAAAACAAAAAAAhAAAAAAACAAAAAAAhAPv/AAACAAAAAAAhAPr/AAACAAAAAAAhAPn/AAACAAAAAAAhAPX/AAACAAAAAAAhAPT/AAACAAAAAAAhAPP/AAACAAAAAAAhAPb/AAACAAAAAAAhAPf/AAACAAAAAAAhAPj/AAACAAAAAAAhAPL/AAACAAAAAAAhAPH/AAACAAAAAAAhAPD/AAACAAAAAAAVAPD/AAACAAAAAAAWAPD/AAACAAAAAAAXAPD/AAACAAAAAAAYAPD/AAACAAAAAAAZAPD/AAACAAAAAAAaAPD/AAACAAAAAAAbAPD/AAACAAAAAAAcAPD/AAACAAAAAAAdAPD/AAACAAAAAAAeAPD/AAACAAAAAAAfAPD/AAACAAAAAAAgAPD/AAACAAAAAAASAPP/AAACAAAAAAATAPn/AAACAAAAAAAUAPn/AAACAAAAAAAVAPn/AAACAAAAAAAWAPn/AAACAAAAAAAiAAAAAAACAAAAAAAjAAAAAAACAAAAAAAkAAAAAAACAAAAAAAlAAAAAAACAAAAAAAmAAAAAAACAAAAAAAnAAAAAAACAAAAAAAoAAAAAAACAAAAAAApAAAAAAACAAAAAAApAP//AAACAAAAAAApAP7/AAACAAAAAAApAP3/AAACAAAAAAApAPz/AAACAAAAAAApAPv/AAACAAAAAAAoAPv/AAACAAAAAAAnAPv/AAACAAAAAAAmAPv/AAACAAAAAAAlAPv/AAACAAAAAAAkAPv/AAACAAAAAAAjAPv/AAACAAAAAAAiAPv/AAACAAAAAAA=")
tile_set = SubResource("TileSet_u7sce")

[node name="CameraLockL" type="Area2D" parent="." unique_id=444920801]
collision_layer = 4

[node name="LockL" type="CollisionShape2D" parent="CameraLockL" unique_id=1926109825]
position = Vector2(8, -32)
shape = SubResource("RectangleShape2D_u7sce")

[node name="CameraUnlockL" type="Area2D" parent="." unique_id=718328298]
collision_layer = 4

[node name="UnlockL" type="CollisionShape2D" parent="CameraUnlockL" unique_id=207385597]
position = Vector2(-8, -32)
shape = SubResource("RectangleShape2D_u7sce")

[node name="CameraLockR" type="Area2D" parent="." unique_id=209999674]
collision_layer = 4

[node name="LockR" type="CollisionShape2D" parent="CameraLockR" unique_id=525173006]
position = Vector2(532, -32)
shape = SubResource("RectangleShape2D_qdvp6")

[node name="CameraUnlockR" type="Area2D" parent="." unique_id=1124528197]
collision_layer = 4

[node name="UnlockR" type="CollisionShape2D" parent="CameraUnlockR" unique_id=1041070736]
position = Vector2(550, -32)
shape = SubResource("RectangleShape2D_qdvp6")

[node name="RoomCamera" type="Camera2D" parent="." unique_id=1068080336]
position = Vector2(271, -114)
enabled = false
zoom = Vector2(2, 2)

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="body_entered" from="CameraLockL" to="." method="_LockLeft"]
[connection signal="body_entered" from="CameraUnlockL" to="." method="_UnlockLeft"]
[connection signal="body_entered" from="CameraLockR" to="." method="_LockRight"]
[connection signal="body_entered" from="CameraUnlockR" to="." method="_UnlockRight"]
